# dwarf-galaxy-dm

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
scripts/: build_sculptor_flames.py  build_sculptor_members.py  fetch_fire2_halos.py  fetch_symphony_halos.py  make_paper_figures_diffusion.py  paper2_pipeline.py  plot_multipop_flames.py  run_anisotropy_robustness.py  run_dc14_prior_predictive.py  run_dc14_retrain_posterior.py  run_edge_reverse_posterior.py  run_estimator_bias_table.py  run_family_swing.py  run_head_to_head_sculptor.py  run_inner_bin_jackknife.py  run_m2_train_cnn.py  run_m3_multipop.py  run_m4_sbi.py  run_m5_validation.py  run_m6_sculptor.py  run_mmfs_flames_consistency.py  run_mock_injection_recovery.py  run_multipop_flames.py  run_proposal_sensitivity.py  run_referee_tests_dwarf.py  run_sculptor_jeans.py  run_sculptor_multipop_jeans.py
src/dm_models/: parametric_priors.py
src/dm_models/diffusion_prior/: dc14_library.py  diffusion.py  realistic_halos.py  score_cnn.py  synthetic_halos.py
src/dynamical_modeling/: jeans.py  jeans_numpy.py  multipop_jeans.py
src/inference/: npe_mdn.py
tests/: test_diffusion_prior_poc.py  test_jeans_smoke.py  test_realistic_halos.py
