[project]
name = "dwarf_dm_inner_structure"
version = "0.0.1"
description = "Dark matter inner structure of Milky Way dwarf galaxies"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "scipy>=1.12",
  "astropy>=6.0",
  "matplotlib>=3.8",
  "pandas>=2.2",
  "pyarrow>=15",
  "agama",
  "galpy>=1.9",
  "gala>=1.8",
  "jax>=0.4.25",
  "jaxlib>=0.4.25",
  "numpyro>=0.13",
  "dynesty>=2.1",
  "emcee>=3.1",
  "corner>=2.2",
  "h5py>=3.10",
  "scikit-learn>=1.4",
  "tqdm",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "pre-commit", "ipykernel", "jupyterlab"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
